# adventofcode

./: README.md
day1/: Cargo.toml
day1/src/: main.rs  step1.rs  step2.rs
day2/: Cargo.toml
day2/src/: main.rs  step1.rs  step2.rs
day3/: Cargo.toml
day3/src/: main.rs  step1.rs  step2.rs
day4/: Cargo.toml
day4/benches/: bench.rs
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/benches/: bench.rs
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/benches/: bench.rs
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/benches/: bench.rs
day7/src/: lib.rs  main.rs
day8/: Cargo.toml  exercise.txt
day8/benches/: bench.rs
day8/src/: lib.rs  main.rs
day9/: Cargo.toml  exercise.txt
day9/src/: lib.rs  main.rs
day_/: Cargo.toml
day_/benches/: bench.rs
day_/src/: lib.rs  main.rs
