[package]
name = "day2"
version = "0.1.0"
authors = ["deuzu"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "step1"
path = "src/step1.rs"

[[bin]]
name = "step2"
path = "src/step2.rs"

[dependencies]
