[package]
name = "day7"
version = "0.1.0"
authors = ["deuzu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
